Fixed the footer, inlined the elements with some messy css. Added contact details with relavent href. Went with fontawesome icons rather than materilize due to alignment issue.

--- a/style.css
+++ b/style.css
@@ -126,3 +126,30 @@ span.card-title-background {
 .input-field .prefix.active {
     color: #01B7FF;
 }
+
+.footer-inline {
+    display: inline-block !important;
+}
+
+p.footer-contact-details {
+    display: inline !important;
+    padding-right: 10px;
+}
+
+p.footer-contact-details:hover {
+    text-decoration: underline;
+}
+
+div#contact-details {
+    margin-top: 5px;
+    padding-top: 7px;
+}
+
+i.footer-icons-alignment {
+    padding-top: 10px;
+    margin-top: 10px;
+}
+
+i.footer-detail-icons {
+    font-size: 18px;
+}
